# rhodium

backend/: CMakeLists.txt
backend/resources/: resources.qrc
backend/resources/styles/: main.css
backend/src/: CMakeLists.txt  main.cpp
backend/src/blockchain/: MiningWidget.cpp  MiningWidget.h  WalletWidget.cpp  WalletWidget.h  block.cpp  block.h  blockchain.cpp  blockchain.h  core.cpp  core.h  networkwidget.cpp  networkwidget.h  transaction.cpp  transaction.h  transactionwidget.cpp  transactionwidget.h
backend/src/crypto/: base58.cpp  base58.h  ecdsa.cpp  ecdsa.h  ripemd160.cpp  ripemd160.h  sha256.cpp  sha256.h
backend/src/gui/: NetworkWidget.h  POSValidatorWidget.h  POWMinerWidget.h  TransactionWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkwidget.cpp  posvalidatorwidget.cpp  powminerwidget.cpp  transactionwidget.cpp  ui_mainwindow.h
backend/src/network/: blockchaincore.h  discovery.cpp  discovery.h  message.cpp  message.h  p2p.cpp  p2p.h  peer.cpp  peer.h
docs/: INSTALL.md
frontend/components/: Wallet.js
frontend/src/: App.js
install/: configure.ps1  install.ps1
